# ChangeLog for dev-ruby/flexmock
# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-ruby/flexmock/ChangeLog,v 1.40 2014/10/30 13:54:13 mrueg Exp $

  30 Oct 2014; Manuel Rüger <mrueg@gentoo.org> flexmock-1.3.1.ebuild,
  flexmock-1.3.3.ebuild:
  Drop jruby target.

  28 Aug 2014; Manuel Rüger <mrueg@gentoo.org> flexmock-1.3.1.ebuild,
  flexmock-1.3.3.ebuild:
  Update HOMEPAGE.

  15 May 2014; Manuel Rüger <mrueg@gentoo.org> -flexmock-1.3.2-r1.ebuild,
  flexmock-1.3.1.ebuild:
  Cleanup old. Remove ruby18.

  20 Apr 2014; Hans de Graaff <graaff@gentoo.org> flexmock-1.3.3.ebuild:
  Add ruby21.

*flexmock-1.3.3 (21 Jan 2014)

  21 Jan 2014; Manuel Rüger <mrueg@gentoo.org> +flexmock-1.3.3.ebuild:
  Version bump.

  11 Nov 2013; Manuel Rüger <mrueg@gentoo.org> -flexmock-1.3.2.ebuild:
  Cleanup old.

*flexmock-1.3.2-r1 (06 Oct 2013)

  06 Oct 2013; Manuel Rüger <mrueg@gentoo.org> +flexmock-1.3.2-r1.ebuild:
  Add ruby20 target.

  27 Jul 2013; Agostino Sarubbo <ago@gentoo.org> flexmock-1.3.1.ebuild:
  Stable for x86, wrt bug #477450

  21 Jul 2013; Agostino Sarubbo <ago@gentoo.org> flexmock-1.3.1.ebuild:
  Stable for amd64, wrt bug #477450

  20 Jul 2013; Hans de Graaff <graaff@gentoo.org> -flexmock-1.2.0.ebuild,
  -flexmock-1.2.0-r1.ebuild:
  Cleanup.

*flexmock-1.3.2 (16 Jul 2013)

  16 Jul 2013; Hans de Graaff <graaff@gentoo.org> +flexmock-1.3.2.ebuild:
  Version bump.

*flexmock-1.3.1 (03 May 2013)

  03 May 2013; Hans de Graaff <graaff@gentoo.org> +flexmock-1.3.1.ebuild:
  Version bump.

*flexmock-1.2.0-r1 (02 Feb 2013)

  02 Feb 2013; Diego E. Pettenò <flameeyes@gentoo.org>
  +flexmock-1.2.0-r1.ebuild:
  Bump to avoid document building (not working as per bug #455064), and use
  wrapper functions for test-unit and rspec execution; tests were failing before
  and fail now.

  19 Jan 2013; Hans de Graaff <graaff@gentoo.org> flexmock-1.2.0.ebuild:
  Update LICENSE, bug 452928.
