@@ -1,8 +1,9 @@
-# Copyright 1999-2014 Gentoo Foundation
+# Copyright 1999-2015 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/dev-ruby/flexmock/flexmock-1.3.3.ebuild,v 1.4 2014/10/30 13:54:13 mrueg Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-ruby/flexmock/flexmock-1.3.3.ebuild,v 1.5 2015/03/20 13:56:41 graaff Exp $
 
 EAPI=5
+# ruby22 -> fails specs
 USE_RUBY="ruby19 ruby20 ruby21"
 
 RUBY_FAKEGEM_DOCDIR="html"
