@@ -1,6 +1,9 @@
 # ChangeLog for dev-ruby/flexmock
-# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-ruby/flexmock/ChangeLog,v 1.40 2014/10/30 13:54:13 mrueg Exp $
+# Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/dev-ruby/flexmock/ChangeLog,v 1.41 2015/03/20 13:56:41 graaff Exp $
+
+  20 Mar 2015; Hans de Graaff <graaff@gentoo.org> flexmock-1.3.3.ebuild:
+  Document problems with ruby22.
 
   30 Oct 2014; Manuel Rüger <mrueg@gentoo.org> flexmock-1.3.1.ebuild,
   flexmock-1.3.3.ebuild:
